# projects

./: .gitignore
botfarm/: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pytest.ini  requirements.txt
botfarm/alembic/: env.py
botfarm/alembic/versions/: 8eea31a2f1e1_initial_migration.py
botfarm/app/core/: config.py  database.py  security.py
botfarm/app/crud/: user.py
botfarm/app/models/: user.py
botfarm/app/routers/: users.py
botfarm/app/schemas/: user.py
botfarm/tests/: conftest.py  test_crud.py  test_users.py
front/: index.html
golang/card/: shuffle.go
golang/mutex/: main.go
golang/mutex/hotel/: go.mod  server.go
golang/net/: client.go  client.html  go.mod  index.html  server.go
golang/product-api/: Makefile  go.mod  go.sum  main.go  swagger.yaml
gpaph/: alpha.py  balance_tree.py  code.py  dimetr.py  draw.py  encode.py  flow.cpp  ford.py  main.py  mark.py  param.py  path.py  prim.py  tree.py
gpaph/ford/: a.out  ford.cpp  net.py
hash_finder/: Cargo.toml  README.md
hash_finder/src/: main.rs
micro-shop/: main.py  pyproject.toml
micro-shop/api_v1/products/: crud.py  schemas.py
micro-shop/core/: config.py
micro-shop/core/models/: __init__.py  base.py  db_helper.py  product.py
mini-grep/: README.md
mini-grep/src/: main.rs
opencl/: main  opencl_example
pixel-persona/: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sbt  build.sh  dev-server.sh
pixel-persona/docs/: api.md  development.md
python/: main.py  proc.py
python/async/: main.py
python/sockets/: main.py
scala/budget-tracker-api/: .gitignore  README.md  build.sbt
score/one/: go.mod  main.go  main_test.go
score/two/: find_primes  main.go  testfile.txt
test-vk/: README.md  calculate.sh  cut.sh  main.py  vmaf_results.csv
tgbot/: .gitignore  README.md  main.py  pyproject.toml
tgbot/handle_file/: SRTProcess.py
tgbot/src/: api.py
tgbot/src/handle_file/: SRTProcess.py  translate.py
(+35 files in other folders)
