[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Suren Khorenyan <surenkhorenyan@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.23.1" }
pydantic = { extras = ["email"], version = "^2.0.3" }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
aiosqlite = "^0.21.0"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
